fix username wrap

--- a/static/css/askme.css
+++ b/static/css/askme.css
@@ -51,7 +51,8 @@
 }
 
 .ask-left-col-name {
-  font-size: 0.8em;
+  font-size: 0.75em;
+  word-break: break-all;
 }
 
 .footer-text {
